update the DL model inference and shap_DL for new sample

--- a/1119_morecontrol_DL.ipynb
+++ b/1119_morecontrol_DL.ipynb
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +330,7 @@
     "    X_train_scaled = pd.DataFrame(X_train_scaled, columns=columns, index=X_train.index)\n",
     "    X_test_scaled = pd.DataFrame(X_test_scaled, columns=columns, index=X_test.index)\n",
     "    \n",
-    "    return X_train_scaled, X_test_scaled\n",
+    "    return X_train_scaled, X_test_scaled, wei_train_scaler\n",
     "\n",
     "def metric(y_test, y_pred):  # label, pred\n",
     "    y_test = y_test.cpu().detach().numpy()\n",
